# fast-thinker

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  proposal.md  pyproject.toml
tests/: test_inference.py  test_long_context_qa.py  test_multiple_choice.py  test_relative_reward.py  test_retrieval_server.py  test_scoring.py  test_submission_crypto.py  test_synthesized_verify.py  test_validator_cli.py
thinker/: common_seed.py  config.py  interrupts.py  wallet.py
thinker/miner/: cli.py  submit.py
thinker/problems/: decontam.py  interface.py
thinker/problems/tracks/: __init__.py  constructive.py  depth_control.py  olympiad.py  procedural.py  synthesized.py
thinker/retrieval/: __init__.py  bm25.py  server.py
thinker/reward/: relative.py  verify.py
thinker/submission/: adapter_validation.py  commitments.py  crypto.py  fingerprint.py  huggingface.py
thinker/validator/: chain.py  cli.py  epoch_loop.py  eval_cache.py  inference.py  keystore.py  long_context_qa.py  multiple_choice.py  round_state.py  safe_adapter.py  scoring.py  wandb_logger.py
