[project]
name = "thinker-validator-miner"
version = "0.1.0"
description = "Thinker Bittensor subnet validator and miner package."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["bittensor", "lora", "reasoning", "subnet", "validator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "math-verify>=0.5.0",
    "cryptography>=42.0.0",
    "torch>=2.2.0",
    "safetensors>=0.4.0",
    "peft>=0.13.0",
    "huggingface-hub>=0.28.0",
    "bm25s>=0.2.0",
    "datasets>=2.18.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]
procedural = [
    "reasoning-gym>=0.1.0",
]
validator = [
    "reasoning-gym>=0.1.0",
    "transformers[serving] @ git+https://github.com/huggingface/transformers.git@main",
    "torchvision",
    "pillow",
    # Keep vLLM and all FlashInfer packages in lockstep; mixed versions fail at startup.
    "vllm==0.22.1",
    "flashinfer-python==0.6.11.post2",
    "flashinfer-cubin==0.6.11.post2",
    "flashinfer-jit-cache==0.6.11.post2",
    "bittensor==10.4.1",
    "bittensor-cli==9.22.3",
    "bittensor-wallet==4.1.0",
    "wandb>=0.16.0",
]
miner = [
    "bittensor==10.4.1",
    "bittensor-cli==9.22.3",
    "bittensor-wallet==4.1.0",
]

[project.scripts]
thinker-validator = "thinker.validator.cli:main"
thinker-miner = "thinker.miner.cli:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["thinker*"]

[tool.ruff]
target-version = "py311"
